Last update to front-end. Fixed adding timesheet on table to be fixed on center while allowing for scroll for overflow.

--- a/react_debug/src/AppV1.css
+++ b/react_debug/src/AppV1.css
@@ -162,33 +162,35 @@
 .Comp-Table .Buttons .AddComponent{
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  
-  position:absolute;
-  top:0;
-  bottom:0;
+  position:fixed;
+  top:8vh;
+  right:0;
   height:fit-content;
+  width:fit-content;
+  max-height:85vh;
   overflow-y: scroll;
-  border: solid rgba(24, 24, 36, 0.523) .5em;
+  border: solid rgba(24, 24, 36, 0.523) .75em;
   border-radius: .95em;
   border-top-left-radius: .5em;
   border-top-right-radius: .5em;
   z-index:5;
-  width:fit-content;
   display:flex;
   flex-direction: column-reverse;
 }
 
 .Comp-Table .Buttons .AddComponent .Close{
-  position:absolute;
-  height:1.5em;
-  width:1.5em;
-  top:0;
-  right:0;
+  position:fixed;
+  height:1.25em;
+  width:1.25em;
+  top:8.5vh;
+  right:.2em;
   z-index: 1;
   border:solid rgba(106, 10, 10, 0.433) .1em;
   border-radius: .25em;
   margin-top:.25em;
   margin-right: .25em;
   background-color: rgb(153, 149, 149);
+  transition: none;
 }
 
 .Comp-Table .Buttons .AddComponent .Close:hover{
